--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -41,5 +41,16 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>CFBundleURLTypes</key>
+    <array>
+        <dict>
+            <key>CFBundleTypeRole</key>
+            <string>Editor</string>
+            <key>CFBundleURLSchemes</key>
+            <array>
+      			<string>com.googleusercontent.apps.1031134513208-p7ue0pq7ch0l1b8kae6mjvf36f5u3v50</string>
+            </array>
+        </dict>
+    </array>
 </dict>
 </plist>
