--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   google_sign_in: ^4.0.1+1
   unicorndial: ^1.1.5
   provider: ^2.0.0+1
+  flare_flutter: ^1.5.0
   
 dev_dependencies:
   flutter_test:
@@ -54,6 +55,8 @@ flutter:
   # assets:
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
+  assets:
+  - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
