--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -66,6 +66,8 @@ dependencies {
     implementation "androidx.core:core-ktx:+"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.multidex:multidex:2.0.1'
+    implementation 'androidx.core:core:1.+'
+    implementation 'androidx.appcompat:appcompat:1.+'
 }
 
 apply plugin: 'com.google.gms.google-services'
